Update redirect URL in index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=https://youtube.com/shorts/o6HbMbsEpSI?si=plnwGEPNJomQs5kc">
+  <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=hFpSc2QD0Fg">
 </head>
 <body>
   <p>Redirection en cours…</p>
